# borzvpn-bot

./: config.py  main.py  pyproject.toml  requirements.txt  tg_bot.db
handlers/: __init__.py  markups.py  payments.py  user.py
models/dbs/: models.py  orm.py
utils/: mail_service.py  tasks.py  utils.py  wireguard.py
